# proc-comm-lib-cwl

./: .gitignore  CMakeLists.txt  Dockerfile_builder  README.md
3ty/yaml-cpp-yaml-cpp-0.6.3/: .travis.yml  CMakeLists.txt
3ty/yaml-cpp-yaml-cpp-0.6.3/test/gtest-1.8.0/googlemock/docs/: CookBook.md
3ty/yaml-cpp-yaml-cpp-0.6.3/test/gtest-1.8.0/googlemock/docs/v1_5/: CookBook.md
3ty/yaml-cpp-yaml-cpp-0.6.3/test/gtest-1.8.0/googlemock/docs/v1_6/: CookBook.md
3ty/yaml-cpp-yaml-cpp-0.6.3/test/gtest-1.8.0/googlemock/docs/v1_7/: CookBook.md
3ty/yaml-cpp-yaml-cpp-0.6.3/test/gtest-1.8.0/googletest/: README.md
assets/: fb.yaml  workflow.yaml
include/converter/: model.hpp
include/utils/: echostd.hpp  httpclient.hpp  jsonconverter.hpp  yamlutils.hpp
src/: cwlconverter.cpp  main.cpp
src/model/: commandlinetool.cpp  commandlinetool.hpp  graph.cpp  graph.hpp  workflow.cpp  workflow.hpp
tests/: CMakeLists.txt  main.cpp
tests/application/: test1.cpp
tests/application/data/: fb.yaml  workflow.yaml
travis/: acceptanceTest.sh
